# maya-scenefile-parser

./: README.md  build.sh  parse.py  pyproject.toml
maya_scenefile_parser/: binary.py  common.py  iff.py
test/: maya_ascii_test.py  maya_binary_test.py
