[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maya_scenefile_parser"
readme = "README.md"
authors = [
    {name = "Alon Gibli"},
    {name = "Marcus Ottosson"},
]
description = "Autodesk Maya Scenefile Parser"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
version = "2020"

[project.urls]
"Homepage" = "https://github.com/mottosso/maya-scenefile-parser"
"Bug Tracker" = "https://github.com/mottosso/maya-scenefile-parser/issues"

[tool.setuptools.packages.find]
include = ["maya_scenefile_parser"]

[tool.setuptools.package-data]
maya_scenefile_parser = ["modules/maya/2012/typeids.dat"]

[tool.distutils.bdist_wheel]
universal = true
